fix project seciton spacing

--- a/juxtaposeidon/app/assets/stylesheets/application.scss
+++ b/juxtaposeidon/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
     }
 
 .content {
-    height: 600px;
+    height: 750px;
     width:100%;
     background: white;
     z-index: 2;
@@ -39,7 +39,6 @@
     margin: 30px 60px;
 }
 .content p {
-    font-size:20px;
     color: #343434;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
